[tool.poetry]
name = "mommas-cookbook"
version = "0.1.0"
description = "A Project About Mom's Recipes"
authors = ["Pedro Algarvio <pedro@algarvio.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
