[metadata]
name = mommas-cookbook
description = A Project for Mom's Recipes
long_description = file: README.md
long_description_content_type = text/x-markdown
author = Pedro Algarvio
author_email = pedro@algarvio.me
url = https://github.com/UfSoft/mommas-cookbook
project_urls =
    Source=https://github.com/UfSoft/mommas-cookbook
    Tracker=https://github.com/UfSoft/mommas-cookbook/issues
    Documentation=https://mommas-cookbook.readthedocs.io
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Typing :: Typed
    License :: OSI Approved :: Apache Software License
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >= 3.9.0
setup_requires =
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[options.packages.find]
where = src
exclude =
    tests

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  docs = requirements/docs.txt
  lint = requirements/lint.txt
  tests = requirements/tests.txt
  changelog = requirements/changelog.txt
  notebook = requirements/notebook.txt
  "3.9" = requirements/static/pkg/py3.9/base.txt
  "3.10" = requirements/static/pkg/py3.10/base.txt
  tests-3.9 = requirements/static/ci/py3.9/tests.txt
  tests-3.10 = requirements/static/ci/py3.10/tests.txt

[options.entry_points]
console_scripts =
  mommas-cookbook = mcookbook.cli.__main__:main

[bdist_wheel]
universal = false

[sdist]
owner = root
group = root

[flake8]
max-line-length = 120
exclude =
  # No need to traverse our git directory
  .git,
  # Nox virtualenvs are also not important
  .nox,
  # There's no value in checking cache directories
  __pycache__,
  # Don't check the auto generated version file
  src/mcookbook/version.py,
  # Package build stuff
  build,
  dist,
  # The conf file is mostly autogenerated, ignore it
  docs/conf.py,
  # Also ignore setup.py, it's mostly a shim
  setup.py,
  # Ignore our custom pre-commit hooks
  .pre-commit-hooks

per-file-ignores =
  # F401 imported but unused
  __init__.py: F401
  # D100 Missing docstring in public module
  # D103 Missing docstring in public function
  noxfile.py: D100,D102,D103,D107,D212,E501
  tests/*.py: D100,D103

ignore =
  # D104 Missing docstring in public package
  D104,
  # D107 Missing docstring in __init__ - Class docstrings will cover __init__ docstrings
  D107,
  # D212 Multi-line docstring summary should start at the first line
  D212,
  # D200 One-line docstring should fit on one line with quotes
  D200,

# flake8-docstrings config
docstring-convention = google


[mypy]
python_version = 3.9
mypy_path = src
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
